--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1 id="titre">GoldCat</h1>
-    <a href="acceuil.html"><img src="GoldCat.png" alt="" id="imageOne"></a>
+    <a href="index.html"><img src="GoldCat.png" alt="" id="imageOne"></a>
     <p id="msgBase">Bonjour a tous et a tout ceux qui tombe sur ce site. <br> Mais il est malheuresement encore en développement 😭.<br> Vous avez le droit de recharger cette page indéfiniment,<br> mais vous pouvez aussi apprendre a coder un site par exemple entre temps en utilisant le html (<a href="https://code.visualstudio.com">petit lien d'un outils de développement html</a>)</p>
 </body>
 </html>
